--- a/COMP4995-Assignment1_v2/COMP4995-Assignment1_v2.vcxproj
+++ b/COMP4995-Assignment1_v2/COMP4995-Assignment1_v2.vcxproj
@@ -76,6 +76,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(IncludeDir);$(DXSDK_DIR)Include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryDir);$(DXSDK_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -84,6 +86,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>$(IncludeDir);$(DXSDK_DIR)Include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(LibraryDir);$(DXSDK_DIR)Lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
