--- a/COMP4995-Assignment1_v2/COMP4995-Assignment1_v2.vcxproj
+++ b/COMP4995-Assignment1_v2/COMP4995-Assignment1_v2.vcxproj
@@ -167,6 +167,10 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Includes.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Alphabet vSmall.bmp" />
+    <Image Include="tiger.bmp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
