--- a/COMP4995-Assignment1_v2/COMP4995-Assignment1_v2.vcxproj.filters
+++ b/COMP4995-Assignment1_v2/COMP4995-Assignment1_v2.vcxproj.filters
@@ -48,4 +48,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="Alphabet vSmall.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="tiger.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
